recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:3: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
 	droite()
              ^FourSquare:5: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^